# vcf-consensus

./: .gitignore  README.md  pyproject.toml
src/vcf_consensus/: __init__.py  cli.py  consensus.py  fasta_parser.py  logger.py  vcf_parser.py
