[project]
name = "vcf-consensus"
version = "0.1.0"
description = "Генерация консенсусных последовательностей из VCF и FASTA"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Your Name", email = "youremail@example.com" }]
license = { text = "MIT" }

dependencies = [
    "pytest",
    "pre-commit"
]

[tool.setuptools]
packages = { find = { where = ["src"] } }

[project.scripts]
vcf_consensus = "vcf_consensus.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"